# brew-search

./: .gitignore  CHANGELOG.md  README.md  README.md.template  SECURITY.md  hatch_build.py  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
Formula/: brew-hop-search.rb  brew-search.rb
docs/: AUDIENCES.md  COMPARABLES.md  DESIGN-SYSTEM.md  INSPIRATIONS.md  LEAST-SURPRISE.md  STABILITY.md  TASTE.md  brew-hop-search.1.md
docs/specs/: ENVELOPE.md  INPUT.md  OUTPUT.md  SCHEMA.md
docs/specs/drafts/: cli-vocabulary.md  cookbook.md  format-color.md  help-modes.md  index-git-history.md  installed-indicator.md  man-flag.md  output-readability.md  search-syntax.md  short-names.md  timing.md
docs/specs/features/: cache-flow.md  cache-status.md  history.md  outdated.md  search.md  version.md
scripts/: build-readme.sh  build-tag.sh  bump-version.sh  publish.sh  release.sh
src/brew_hop_search/: __init__.py  _bg_installed.py  _config.py  _version_resolve.py  cache.py  cli.py  defaults.py  display.py  help_ui.py  history.py  outdated.py  search.py  timing.py  version_check.py
src/brew_hop_search/sources/: api.py  installed.py  local.py  taps.py
tests/: conftest.py  snap.py  test_cache_flow.py  test_cli.py  test_config.py  test_defaults.py  test_history.py  test_output.py  test_refresh.py  test_refresh_dispatch.py  test_search_syntax.py  test_taps.py  test_timing.py  test_version.py
tests/snapshots/: test_casks_only.txt  test_default_output.txt  test_default_output_no_results.txt  test_fmt_cask.txt  test_fmt_formula.txt  test_fmt_tap.txt  test_formulae_only.txt  test_grep_output.txt  test_help.txt  test_help_terse.txt  test_json_output.txt  test_quiet_output.txt
