[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brew-hop-search"
version = "0.2.0"
description = "Fast offline-first search of Homebrew formulae, casks, taps, and installed packages"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "mcint" }]
keywords = ["homebrew", "brew", "search", "cli", "macos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Software Distribution",
]
dependencies = ["sqlite-utils"]

[dependency-groups]
dev = ["pytest"]

[project.scripts]
brew-hop-search = "brew_hop_search.cli:main"

[project.urls]
Homepage = "https://github.com/mcint/brew-hop-search"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
