[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brew-hop-search"
version = "0.3.5"
description = "Fast offline-first search of Homebrew formulae, casks, taps, and installed packages"
readme = "README.md"
license = "MPL-2.0"
requires-python = ">=3.9"
authors = [{ name = "mcint" }]
keywords = ["homebrew", "brew", "search", "cli", "macos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Software Distribution",
]
dependencies = ["sqlite-utils"]

[dependency-groups]
dev = ["pytest"]

[project.scripts]
brew-hop-search = "brew_hop_search.cli:main"
brewhs = "brew_hop_search.cli:main"

[project.urls]
Homepage = "https://github.com/mcint/brew-hop-search"
Documentation = "https://github.com/mcint/brew-hop-search/tree/main/docs"
Changelog = "https://github.com/mcint/brew-hop-search/releases"
Issues = "https://github.com/mcint/brew-hop-search/issues"
Source = "https://github.com/mcint/brew-hop-search"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.hatch.build]
artifacts = [
    "src/brew_hop_search/_build_info.py",
    "src/brew_hop_search/data/",
]

[tool.hatch.build.hooks.custom]
